--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           </div>
 
           <!-- Delete Request Form -->
-          <form id="deleteForm" action="https://formspree.io/f/yourEndpoint" method="POST" novalidate>
+          <form id="deleteForm" action="https://formspree.io/f/xandjnlr" method="POST" novalidate>
             <!-- Honeypot -->
             <div class="hp-wrap" aria-hidden="true">
               <label>Leave this field empty
