--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
             <input type="hidden" name="_subject" value="BillMint – Delete my account" />
             <input type="hidden" name="form" value="billmint-delete-request" />
             <input type="hidden" name="page" value="Delete Account & Data" />
+            <input type="hidden" name="_replyto" value="">
 
             <div class="field">
               <label for="email">Account email (Google)</label>
@@ -316,68 +317,53 @@
 
     // Form: anti-bot + AJAX submit to Formspree + mailto fallback
     (function(){
-      const form = document.getElementById('deleteForm');
-      const msgBox = document.getElementById('msg');
-      const msgText = document.getElementById('msgText');
-      const start = Date.now();
+    const form = document.getElementById('deleteForm');
+    const msgBox = document.getElementById('msg');
+    const msgText = document.getElementById('msgText');
+    const start = Date.now();
 
-      function show(type, text){
-        msgBox.style.display = 'block';
-        msgText.className = type === 'success' ? 'success' : 'error';
-        msgText.textContent = text;
-        msgBox.scrollIntoView({behavior:'smooth', block:'nearest'});
+    function show(type, text){
+      msgBox.style.display = 'block';
+      msgText.className = type === 'success' ? 'success' : 'error';
+      msgText.textContent = text;
+      msgBox.scrollIntoView({behavior:'smooth', block:'nearest'});
+    }
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      // Anti-bot checks (unchanged)
+      const hp = form.querySelector('input[name="website"]');
+      if (hp && hp.value.trim() !== '') { show('error', 'Submission blocked (bot detected).'); return; }
+      if (Date.now() - start < 3000) { show('error', 'Please take a moment to review your request, then submit again.'); return; }
+      const challenge = form.challenge.value.trim().toUpperCase();
+      if (challenge !== 'BILL') { show('error', 'Please type BILL in the confirmation field.'); form.challenge.focus(); return; }
+
+      // NEW: copy email to _replyto so Formspree can autorespond to the sender
+      const replyTo = form.querySelector('input[name="_replyto"]');
+      if (replyTo) replyTo.value = form.email.value.trim();
+
+      // Build payload and submit to Formspree
+      const data = new FormData(form);
+
+      try {
+        const res = await fetch(form.action, {
+          method: 'POST',
+          body: data,
+          headers: { 'Accept': 'application/json' }
+        });
+
+        if (res.ok) {
+          // Redirect to thank-you page
+          window.location.href = 'thanks.html';
+        } else {
+          show('error', 'Could not submit right now. Please email contact@francisoyitoba.com.');
+        }
+      } catch (err) {
+        show('error', 'Network error. Please try again or email contact@francisoyitoba.com.');
       }
-
-      form.addEventListener('submit', async (e) => {
-        e.preventDefault();
-
-        // Anti-bot checks
-        const hp = form.querySelector('input[name="website"]');
-        if (hp && hp.value.trim() !== '') {
-          show('error', 'Submission blocked (bot detected).');
-          return;
-        }
-        if (Date.now() - start < 3000) { // time-to-submit gate
-          show('error', 'Please take a moment to review your request, then submit again.');
-          return;
-        }
-        const challenge = form.challenge.value.trim().toUpperCase();
-        if (challenge !== 'BILL') {
-          show('error', 'Please type BILL in the confirmation field.');
-          form.challenge.focus();
-          return;
-        }
-
-        // Build payload
-        const data = new FormData(form);
-
-        // If Formspree endpoint not set, fallback to mailto
-        const action = form.getAttribute('action') || '';
-        if (action.includes('yourEndpoint')) {
-          const email = encodeURIComponent(form.email.value.trim());
-          const biz   = encodeURIComponent(form.business_name.value.trim());
-          const extra = encodeURIComponent(form.message.value.trim());
-          const body  = `Account email: ${email}%0D%0ABusiness name: ${biz}%0D%0A%0D%0A${extra}`;
-          const mail  = `mailto:contact@francisoyitoba.com?subject=BillMint%20%E2%80%93%20Delete%20my%20account&body=${body}`;
-          window.location.href = mail;
-          show('success', 'Email compose opened. Send it to complete your request.');
-          form.reset();
-          return;
-        }
-
-        try {
-          const res = await fetch(action, { method: 'POST', body: data, headers: { 'Accept': 'application/json' }});
-          if (res.ok) {
-            show('success', 'Request received. We’ll verify ownership and email you a confirmation.');
-            form.reset();
-          } else {
-            show('error', 'Could not submit right now. Please email contact@francisoyitoba.com.');
-          }
-        } catch (err) {
-          show('error', 'Network error. Please try again or email contact@francisoyitoba.com.');
-        }
-      });
-    })();
+    });
+  })();
   </script>
 
   <!-- JSON-LD (WebPage) -->
