--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
             <div class="field">
               <label for="challenge">Type <strong>BILL</strong> to confirm</label>
-              <input id="challenge" class="control" name="challenge" required placeholder="BILL" inputmode="latin" />
+              <input id="challenge" class="control" name="challenge" required placeholder="BILL" inputmode="text" />
             </div>
 
             <div class="field full consents">
